Add separation feature between diffirent datatypes fields and their methods in rule config dialog window