@@ -3,7 +3,9 @@ package com.vkr.validatorgen.application;
 import com.vkr.validatorgen.domain.DtoParser;
 import com.vkr.validatorgen.domain.DtoSpec;
 
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 public final class RefreshFieldsUseCase {
     private final DtoParser parser;
@@ -15,20 +17,25 @@ public final class RefreshFieldsUseCase {
     public Result execute(String dtoText) {
         DtoSpec dto = parser.parse(dtoText);
         if (dto == null) return Result.error("Could not parse DTO class from editor text.");
-        List<String> fields = dto.getFieldTypes().entrySet().stream()
+        Map<String, List<String>> fieldsByType = dto.getFieldTypes().entrySet().stream()
                 .filter(e -> "int".equals(e.getValue()) || "String".equals(e.getValue()))
-                .map(java.util.Map.Entry::getKey)
-                .sorted()
-                .toList();
+                .collect(java.util.stream.Collectors.groupingBy(
+                        Map.Entry::getValue,
+                        LinkedHashMap::new,
+                        java.util.stream.Collectors.mapping(Map.Entry::getKey, java.util.stream.Collectors.toList())
+                ));
+        fieldsByType.replaceAll((k, v) -> v.stream().sorted().toList());
+
+        List<String> fields = fieldsByType.values().stream().flatMap(List::stream).sorted().toList();
         if (fields.isEmpty()) return Result.error("No supported fields found in DTO. Supported types: int, String.");
-        return Result.success(fields);
+        return Result.success(fields, fieldsByType);
     }
 
     public sealed interface Result permits Result.Success, Result.Error {
-        record Success(List<String> fields) implements Result {}
+        record Success(List<String> fields, Map<String, List<String>> fieldsByType) implements Result {}
         record Error(String message) implements Result {}
 
-        static Success success(List<String> fields) { return new Success(fields); }
+        static Success success(List<String> fields, Map<String, List<String>> fieldsByType) { return new Success(fields, fieldsByType); }
         static Error error(String message) { return new Error(message); }
     }
 }
